[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/InitialMenu/PlayerSelecter/PlayerSelecter.gd" type="Script" id=1]
[ext_resource path="res://Fotos/SmallerConfirmButton.png" type="Texture" id=2]
[ext_resource path="res://Fotos/SmallerConfirmButtonDisabled.png" type="Texture" id=3]
[ext_resource path="res://Fotos/SmallerConfirmButtonSelected.png" type="Texture" id=4]
[ext_resource path="res://UI/InitialMenuCris/PlayerSelecter/PlayerPreview/PlayerPreview_new.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/InitialMenuCris/PlayerSelecter/CharacerIconPreview/CharacterIconPreview.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/InitialMenuCris/PlayerSelecter/AvatarCostumization.gd" type="Script" id=7]
[ext_resource path="res://UI/InitialMenuCris/PlayerSelecter/ConfirmButton.gd" type="Script" id=8]
[ext_resource path="res://Fonts/new_button_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://UI/Keyboard/Shortcut_space.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Keyboard/Shortcut.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Keyboard/Tiles/escape.png" type="Texture" id=12]
[ext_resource path="res://Fonts/buttonFontCards.tres" type="DynamicFont" id=13]

[node name="cris_PlayerSelecterContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
player_preview_1 = NodePath("HBoxContainer/AvatarBody/PlayerPreview3")
player_preview_2 = NodePath("HBoxContainer/AvatarBody/PlayerPreview4")

[node name="Label" type="Label" parent="."]
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.964706, 0.921569, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="AvatarBody" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 415.0
margin_bottom = 564.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 2
size_flags_stretch_ratio = 0.7

[node name="PlayerPreview3" parent="HBoxContainer/AvatarBody" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 415.0
margin_bottom = 460.0
rect_min_size = Vector2( 50, 460 )

[node name="PlayerPreview4" parent="HBoxContainer/AvatarBody" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 464.0
margin_right = 415.0
margin_bottom = 924.0
rect_min_size = Vector2( 50, 460 )

[node name="PlayerPreview5" parent="HBoxContainer/AvatarBody" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 464.0
margin_right = 415.0
margin_bottom = 924.0
rect_min_size = Vector2( 50, 460 )

[node name="PlayerPreview6" parent="HBoxContainer/AvatarBody" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 464.0
margin_right = 415.0
margin_bottom = 924.0
rect_min_size = Vector2( 50, 460 )

[node name="ConfirmAvatar" type="TextureButton" parent="HBoxContainer/AvatarBody"]
margin_left = 157.0
margin_top = 464.0
margin_right = 257.0
margin_bottom = 564.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 2.43
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" parent="HBoxContainer/AvatarBody/ConfirmAvatar" instance=ExtResource( 10 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 88.0
margin_right = 74.0
margin_bottom = 104.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="AvatarCostumization" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 415.0
margin_right = 1023.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/separation = 20
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/AvatarCostumization"]
margin_right = 608.0
margin_bottom = 50.0
rect_min_size = Vector2( 5, 50 )
size_flags_vertical = 4
size_flags_stretch_ratio = 1.23
color = Color( 0.945098, 0.631373, 0.427451, 1 )

[node name="Instructions" type="Label" parent="HBoxContainer/AvatarCostumization/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Choose Your Character"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvailableAvatars" type="GridContainer" parent="HBoxContainer/AvatarCostumization"]
margin_top = 70.0
margin_right = 608.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
columns = 3

[node name="CharacterIconPreview" parent="HBoxContainer/AvatarCostumization/AvailableAvatars" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 220.0
rect_scale = Vector2( 1, 1 )

[node name="VBoxContainer" parent="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview" index="0"]
margin_top = 0.0
margin_bottom = 220.0

[node name="CharacterIconPreview2" parent="HBoxContainer/AvatarCostumization/AvailableAvatars" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_top = 0.0
margin_right = 404.0
margin_bottom = 220.0
rect_scale = Vector2( 1, 1 )
character = 1

[node name="VBoxContainer" parent="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2" index="0"]
margin_top = 0.0
margin_bottom = 220.0

[node name="CharacterIconPreview3" parent="HBoxContainer/AvatarCostumization/AvailableAvatars" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_top = 0.0
margin_right = 608.0
margin_bottom = 220.0
rect_scale = Vector2( 1, 1 )
character = 2

[node name="VBoxContainer" parent="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3" index="0"]
margin_top = 0.0
margin_bottom = 220.0

[node name="CharacterIconPreview4" parent="HBoxContainer/AvatarCostumization/AvailableAvatars" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 224.0
margin_right = 200.0
margin_bottom = 444.0
rect_scale = Vector2( 1, 1 )
character = 3

[node name="VBoxContainer" parent="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4" index="0"]
margin_top = 0.0
margin_bottom = 220.0

[node name="CharacterIconPreview5" parent="HBoxContainer/AvatarCostumization/AvailableAvatars" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_top = 224.0
margin_right = 404.0
margin_bottom = 444.0
rect_scale = Vector2( 1, 1 )
character = 4

[node name="VBoxContainer" parent="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5" index="0"]
margin_top = 0.0
margin_bottom = 220.0

[node name="CharacterIconPreview6" parent="HBoxContainer/AvatarCostumization/AvailableAvatars" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_top = 224.0
margin_right = 608.0
margin_bottom = 444.0
rect_scale = Vector2( 1, 1 )
character = 4

[node name="VBoxContainer" parent="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6" index="0"]
margin_top = 0.0
margin_bottom = 220.0

[node name="AvatarName" type="LineEdit" parent="HBoxContainer/AvatarCostumization"]
visible = false
margin_left = 101.0
margin_top = 275.0
margin_right = 501.0
margin_bottom = 325.0
rect_min_size = Vector2( 400, 50 )
size_flags_horizontal = 6
size_flags_vertical = 10
clear_button_enabled = true
placeholder_text = "Write here your player "

[node name="Label" type="Label" parent="HBoxContainer/AvatarCostumization/AvatarName"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = -86.0
margin_right = 200.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Write here the name of your character"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmAvatarName" type="TextureButton" parent="HBoxContainer/AvatarCostumization"]
visible = false
margin_left = 251.0
margin_top = 70.0
margin_right = 351.0
margin_bottom = 170.0
size_flags_horizontal = 6
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="Shortcut" parent="HBoxContainer/AvatarCostumization/ConfirmAvatarName" instance=ExtResource( 11 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -6.0
margin_right = 15.0
margin_bottom = 24.0
texture = ExtResource( 12 )

[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarBody/ConfirmAvatar" method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarBody/ConfirmAvatar" method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarBody/ConfirmAvatar" method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarBody/ConfirmAvatar" method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarBody/ConfirmAvatar" method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5" method="_on_other_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6/VBoxContainer/TextureRect2/CenterContainer/Button" to="HBoxContainer/AvatarBody/ConfirmAvatar" method="_on_Button_pressed"]

[editable path="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview"]
[editable path="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview2"]
[editable path="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview3"]
[editable path="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview4"]
[editable path="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview5"]
[editable path="HBoxContainer/AvatarCostumization/AvailableAvatars/CharacterIconPreview6"]
